# codegrep

./: .gitignore  README.md  pyproject.toml
codegrep/: cli.py  config.py  embeddings.py  index.py  llm_search.py  logging.py
notebooks/: test.ipynb
tests/: test_code.py
